--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-scroll-to-top": "^3.0.0",
+    "react-slick": "^0.29.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
